# conway_sfml

./: CMakeLists.txt  README  ffmpeg_wrapper.cpp  ffmpeg_wrapper.hpp  game_of_life.hpp  main.cpp
